[project]
name = "philharmonic"
version = "0.1.0"
description = "Object-aware process management (PHILharmonicFlows) on Frappe"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "philharmonic"
